--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     name: gela
 
+    services:
+      docker:
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
