--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,3 +10,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      # - name: Build Docker image
+      #   uses: docker/build-push-action@v5
+
+      # - name: Run tests in Docker container
+      #   run: docker run -e CI=true docker-react npm run test
+  
