--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      # - name: Build Docker image
-      #   uses: docker/build-push-action@v5
+      - name: Build Docker image
+        uses: docker/build-push-action@v5
 
       # - name: Run tests in Docker container
       #   run: docker run -e CI=true docker-react npm run test
