--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,19 @@ version: '3'
 services:
   react-app:
     build:
-      context: ./frontend
+      context: .
       dockerfile: Dockerfile.dev
     ports:
       - "3000:5173"
     volumes:
       - /react-app/node_modules
-      - ./frontend:/react-app
+      - ./:/react-app
 
   react-app-tests:
     build:
-      context: ./frontend
+      context: .
       dockerfile: Dockerfile.dev
     volumes:
       - /react-app/node_modules
-      - ./frontend:/react-app
+      - ./:/react-app
     command: ["npm", "run", "test"]
