--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build -f Dockerfile.dev .
+        run: docker build -f Dockerfile.dev . -t react-app/unit-test
+
+      - name: Run unit tests
+        run: docker run react-app/unit-test npm run test
